# imp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml
demo/: Dockerfile  README.md  _gen_tapes.sh  amend.tape  branch.tape  changelog.tape  clean.tape  commit.tape  config.tape  doctor.tape  done.tape  explain.tape  fake-claude  fake-gh  fix.tape  fixup.tape  fleet.tape  help.tape  log.tape  merge.tape  pr.tape  push.tape  release.tape  rescue.tape  resolve.tape  revert.tape  review.tape  run.sh  setup-commit.sh  setup-conflict.sh  setup-dirty.sh  setup-empty.sh  setup-feat.sh  setup-fixup.sh  setup-fleet.sh  setup-history.sh  setup-pr.sh  setup-release.sh  setup-rescue.sh  setup-resolve.sh  (+23 more)
docs/: index.html  robots.txt  sitemap.xml
lib/: ai.sh  common.sh  prompts.sh
src/imp/: __init__.py  __main__.py  ai.py  config.py  console.py  depgraph.py  gh.py  git.py  main.py  prompts.py  theme.py  validate.py  version.py  workflow.py
src/imp/commands/: amend.py  branch.py  changelog.py  clean.py  commit.py  config.py  doctor.py  done.py  explain.py  fix.py  fixup.py  fleet.py  help.py  log.py  merge.py  pr.py  push.py  release.py  rescue.py  resolve.py  revert.py  review.py  setup.py  ship.py  split.py  standup.py  stash.py  status.py  sync.py  tag.py  tidy.py  undo.py  worktree.py
tests/: commands.bats  common.bats  conftest.py  helpers.bash  test_ai.py  test_changelog.py  test_commands.py  test_commit.py  test_depgraph.py  test_git.py  test_git_extended.py  test_prompts.py  test_release.py  test_undo.py  test_validate.py  test_version.py  test_worktree.py
